comment : "페이지별 footer 추가"

--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -230,8 +230,11 @@
 <!-- 리뷰 리스트 -->
 <input type="hidden" id="reviewList" th:value="${reviewList}"/>
 
+
 <!-- Back to Top -->
 <a class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top" href="#"><i class="fa fa-arrow-up"></i></a>
+
+<footer th:replace="~{/layout/footer::footerFragment}"></footer>
 </body>
 
 </html>
