--- a/src/main/resources/templates/my-accommodation-list.html
+++ b/src/main/resources/templates/my-accommodation-list.html
@@ -98,6 +98,7 @@
 <!-- Back to Top -->
 <a href="#" class="btn btn-primary btn-primary-outline-0 btn-md-square back-to-top"><i class="fa fa-arrow-up"></i></a>
 
+<footer th:replace="~{/layout/footer::footerFragment}"></footer>
 
 <!-- JavaScript Libraries -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
