--- a/src/main/resources/templates/mypageInfo.html
+++ b/src/main/resources/templates/mypageInfo.html
@@ -34,5 +34,7 @@
 </div>
 <input id="useremail" th:value="${member.email}" type="hidden" >
 <!--<span sec:authentication="principal.authorities"></span>-->
+
+<footer th:replace="~{/layout/footer::footerFragment}"></footer>
 </body>
 </html>
