--- a/src/main/resources/templates/reservationPage.html
+++ b/src/main/resources/templates/reservationPage.html
@@ -297,7 +297,7 @@
             })
             .catch(error => {
                 console.error('Error:', error);
-                alert('예약 신청 중 오류가 발생했습니다.입력한 날짜를 확인해 주세요');
+                alert('예약 신청 중 오류가 발생했습니다. 입력한 날짜가 잘 못 되었거나 여러번 요청을 반복하실 수 없습니다');
             });
     });
 </script>
