refactor : 타임리프 연결 및 코드 정리

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko-KR">
+<html lang="ko-KR" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <section th:replace="~{/layout/head::headFragment}"></section>
