comment : "인기 숙소 top 6 이미지 추가"

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,7 +65,8 @@
         <div class="packages-carousel owl-carousel">
             <div class="packages-item" th:each="accommodation,accommodationStat : ${highScoreAccommodations}">
                 <div class="packages-img">
-                    <img alt="Image" class="img-fluid w-100 rounded-top" src="/img/packages-4.jpg">
+<!--                    <img alt="Image" class="img-fluid w-100 rounded-top" src="/img/packages-4.jpg">-->
+                    <img alt="Image" class="img-fluid w-100 rounded-top" th:src="${accommodation.imageUrl}">
                     <div class="packages-info d-flex border border-start-0 border-end-0 position-absolute" style="width: 100%; bottom: 0; left: 0; z-index: 5;"></div>
                     <div class="packages-price py-2 px-4" style="text-align: center" th:text="'TOP '+${accommodationStat.index+1}"></div>
                 </div>
