--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -2,14 +2,13 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <footer th:fragment="footerFragment">
   <!--Copyright Area -->
+
   <section class="container-fluid copyright text-body py-4">
     <div class="container">
       <div class="row g-4 align-items-center">
         <div class="col-md-6 text-center text-md-end mb-md-0">
-          <span>
-            <i class="fas fa-copyright me-2"></i>copyright
-              <a class="text-white" th:href="@{https://github.com/anonymousOrmi/simsasookbak}">심사숙박</a>
-          </span>
+          <i class="fas fa-copyright me-2"></i>
+          <a class="text-white" th:href="@{https://github.com/anonymousOrmi/simsasookbak}">심사숙박</a>
         </div>
       </div>
     </div>
