--- a/src/main/resources/templates/room-update.html
+++ b/src/main/resources/templates/room-update.html
@@ -148,7 +148,7 @@
             })
             .catch(error => {
                 console.error('Error:', error);
-                alert('객실 수정 중 오류가 발생하였습니다. 입력한 정보를 확인해 주세요');
+                alert('객실 수정 중 오류가 발생하였습니다. 입력하신 정보가 잘못된 형식이거나, 여러번 요청을 반복하실 수 없습니다');
             });
     });
 </script>
