--- a/src/main/resources/templates/layout/navigation-bar.html
+++ b/src/main/resources/templates/layout/navigation-bar.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">숙소 관리</a>
+                    <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" sec:authorize="hasAuthority('BUSINESS')">숙소 관리</a>
                     <div class="dropdown-menu m-0">
                         <a href="/management/myAccommodations" class="dropdown-item">내 숙소 관리</a>
                         <a href="/management/reservations" class="dropdown-item">예약 관리</a>
