feat: 숙소 이미지 수정

--- a/src/main/resources/templates/accommodation-register.html
+++ b/src/main/resources/templates/accommodation-register.html
@@ -344,8 +344,8 @@
                     body: formData2
                 }).then(()=>{
                     alert('숙소 등록이 완료되었습니다.');
-                    //TODO: 어디로 보내지
-                    window.location.href = '/';
+                    // //TODO: 어디로 보내지
+                    // window.location.href = '/';
                 });
 
 
