--- a/src/main/resources/templates/accommodation-update.html
+++ b/src/main/resources/templates/accommodation-update.html
@@ -26,12 +26,12 @@
 <div class="container-fluid booking py-5">
   <div class="container py-5">
     <h1 class="text-white mb-3">숙소 정보</h1>
-    <form id="registerForm" th:action="@{/accommodation/{accommodationId}/accommodationUpdate(accommodationId=${accommodation.id})}" method="post">
+    <form enctype="multipart/form-data" id="registerForm" th:action="@{/accommodation/{accommodationId}/accommodationUpdate(accommodationId=${accommodation.id})}" method="post">
       <!-- 숙소 영역 -->
       <div class="row g-3">
         <div class="col-md-3">
-          <label for="imageInput" class="form-label">이미지 업로드</label>
-          <input class="form-control" type="file" id="imageInput" accept="image/*" multiple>
+          <label class="form-label" for="imageInput">이미지 업로드</label>
+          <input accept="image/*" class="form-control" id="imageInput" multiple onchange="addFile(this);" type="file" name="file">
         </div>
         <div class="col-md-9"></div> <!-- 공백 위한 것 -->
         <div class="col-md-2">
@@ -171,7 +171,7 @@
     fetch(this.action, {
       method: 'PUT',
       headers: {
-        'Content-Type': 'application/json',
+        'Content-Type': 'application/json'
       },
       body: JSON.stringify({
         name: name,
@@ -183,18 +183,37 @@
         facilityList: facilityList
       })
     })
-            .then(response => {
+            .then(async response => {
               if (!response.ok) {
                 throw new Error('Network response was not ok');
               }
+              const responseAccommId = await response.json();
+              console.log(`리스폰스 응답 ${responseAccommId}, ${typeof responseAccommId}`)
+              console.log(document.getElementById('imageInput').files);
               // 요청이 성공적으로 처리되면, 여기서 UI를 업데이트하거나 페이지를 새로고침할 수 있습니다.
-              alert('숙소 수정 완료되었습니다.');
-              //TODO: 어디로 보내지
-              window.location.href = '/';
+              let files = document.getElementById('imageInput').files;
+              let formData2 = new FormData();
+              // const upload = () => {
+              for (let i = 0; i < files.length; i++) {
+                formData2.append('file', files[i]);
+              }
+              // }
+
+              fetch(`/accommodation/image/file/register/${responseAccommId}`,{
+                method:'POST',
+                // headers:{'Content-Type' : 'multipart/form-data'},
+                body: formData2
+              }).then(()=>{
+                alert('숙소 등록이 완료되었습니다.');
+                // //TODO: 어디로 보내지
+                // window.location.href = '/';
+              });
+
+
             })
             .catch(error => {
               console.error('Error:', error);
-              alert('숙소 수정 중 오류가 발생하였습니다. 입력하신 정보가 잘못된 형식이거나, 여러번 요청을 반복하실 수 없습니다');
+              alert('숙소 등록 중 오류가 발생하였습니다. 입력한 정보를 확인해 주세요');
             });
   });
 </script>
