--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -41,12 +41,13 @@
 
     <!-- Sign In -->
     <div class="container__form container--signin">
-        <form action="/login" class="form" id="form2" method="post">
+<!--        class="form" id="form2"-->
+        <form action="/login" method="post" class="form">
             <h2 class="form__title">Sign In</h2>
             <input th:name="${_csrf?.parameterName}" th:value="${_csrf?.token}" type="hidden" />
             <input class="input email" id="username" name="username" placeholder="Email" type="email"/>
             <input class="input password" id="pwd" name="password" placeholder="Password" type="password"/>
-            <button class="btn sign-in-button" type="submit">Sign In</button>
+            <button type="submit" class="btn sign-in-button">Sign In</button>
         </form>
     </div>
 
