comment: "adminPage 회원 탈퇴 기능 추가"

--- a/src/main/resources/static/css/adminPage.css
+++ b/src/main/resources/static/css/adminPage.css
@@ -13,6 +13,11 @@
 .py-5{
     padding-bottom: 5.3rem !important;
 }
+@media (min-width: 768px) {
+    .text-md-end {
+         text-align: center;
+    }
+}
 
 .card-body{
     padding: 2rem 1rem;
