--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -180,7 +180,7 @@
             <div class="row g-3">
                 <div class="col-lg-12">
                     <div class="row g-3">
-                        <div class="border border-primary rounded p-3" th:each="review:${reviewList}">
+                        <div class="border border-primary rounded p-3" th:each="review:${reviewList}" th:unless="${review.isDeleted}">
                             <div class="container py-5">
                                 <div class="row g-3">
                                     <div class="col-md-6 text-md-start text-center" style="font-size: 20px;"
