Fix: mypageInfo 푸터 깨지는 현상 해결, review-register 예약한 적이 없으면 alert

--- a/src/main/resources/templates/mypageInfo.html
+++ b/src/main/resources/templates/mypageInfo.html
@@ -35,6 +35,8 @@
 <input id="useremail" th:value="${member.email}" type="hidden" >
 <!--<span sec:authentication="principal.authorities"></span>-->
 
-<div th:replace="~{/layout/footer::footerFragment}"></div>
+<footer style="margin-top: 100px">
+    <div th:replace="~{/layout/footer::footerFragment}"></div>
+</footer>
 </body>
 </html>
