--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -14,7 +14,7 @@
 <!-- Tour Booking Start (검색) -->
 <div class="container-fluid booking py-5">
     <div class="container py-5">
-        <div class="container text-center py-5" style="max-width: 900px;">
+        <div class="container text-center py-5" style="max-width: 900px;max-height: 200px">
             <h3 class="text-white display-3 mb-4">관리자 페이지</h3>
             <ol class="breadcrumb justify-content-center mb-0">
 <!--                <li class="breadcrumb-item"><a href="index.html">Home</a></li>-->
