Fix: 로그인 입력 안했을 때 UI추가, 회원가입 후 새로고침

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -48,6 +48,7 @@
             <input class="input email" id="username" name="username" placeholder="Email" type="email"/>
             <input class="input password" id="pwd" name="password" placeholder="Password" type="password"/>
             <button type="submit" class="btn sign-in-button">Sign In</button>
+            <span class="error-message" id="error-message-1"></span>
         </form>
     </div>
 
